--- a/AdminCenter/tests/Application.UnitTests/Application.UnitTests.csproj
+++ b/AdminCenter/tests/Application.UnitTests/Application.UnitTests.csproj
@@ -6,6 +6,10 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <Compile Remove="Common\Behaviours\RequestLoggerTests.cs" />
+    </ItemGroup>
+
+    <ItemGroup>
         <PackageReference Include="Microsoft.NET.Test.Sdk" />
         <PackageReference Include="nunit" />
         <PackageReference Include="NUnit.Analyzers">
@@ -21,6 +25,11 @@
     <ItemGroup>
         <ProjectReference Include="..\..\src\Application\Application.csproj" />
         <ProjectReference Include="..\..\src\Infrastructure\Infrastructure.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Common\Behaviours\" />
+      <Folder Include="Common\Mappings\" />
     </ItemGroup>
 
 </Project>
