--- a/AdminCenter/src/Web/appsettings.json
+++ b/AdminCenter/src/Web/appsettings.json
@@ -1,7 +1,5 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=AdminCenterDb;Trusted_Connection=True;MultipleActiveResultSets=true"
-  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -9,5 +7,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=./AdminCenter.db;Cache=Shared"
+  }
 }
