--- a/AdminCenter/src/Web/appsettings.json
+++ b/AdminCenter/src/Web/appsettings.json
@@ -1,5 +1,4 @@
 {
-
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -10,5 +9,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=./AdminCenter.db;Cache=Shared"
+  },
+  "Jwt": {
+    "SecretKey": "admincenter.net&xiancheng.zhang@foxmail.com",
+    "Issuer": "xiancheng.zhang@foxmail.com",
+    "Audience": "admincenter.net"
   }
 }
