配置过期时间

--- a/AdminCenter/src/Web/appsettings.json
+++ b/AdminCenter/src/Web/appsettings.json
@@ -13,6 +13,7 @@
   "Jwt": {
     "SecretKey": "admincenter.net&xiancheng.zhang@foxmail.com",
     "Issuer": "xiancheng.zhang@foxmail.com",
-    "Audience": "admincenter.net"
+    "Audience": "admincenter.net",
+    "Expires": 300
   }
 }
