整理代码结构

--- a/AdminCenter/src/Application/Application.csproj
+++ b/AdminCenter/src/Application/Application.csproj
@@ -14,4 +14,9 @@
     <ProjectReference Include="..\Domain\Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="DomainEventHandlers\" />
+    <Folder Include="IntegrationEvents\" />
+  </ItemGroup>
+
 </Project>
