--- a/AdminCenter/src/Web/appsettings.json
+++ b/AdminCenter/src/Web/appsettings.json
@@ -11,8 +11,8 @@
     "DefaultConnection": "Data Source=./AdminCenter.db;Cache=Shared"
   },
   "Jwt": {
-    "SecretKey": "admincenter.net&xiancheng.zhang@foxmail.com",
-    "Issuer": "xiancheng.zhang@foxmail.com",
+    "SecretKey": "https://github.com/zhangxianchengvip/admincenter.net",
+    "Issuer": "https://github.com/zhangxianchengvip",
     "Audience": "admincenter.net",
     "Expires": 300
   }
