--- a/Apps/admin-center-react-antd/package.json
+++ b/Apps/admin-center-react-antd/package.json
@@ -15,6 +15,7 @@
     "@ant-design/icons": "^5.0.1",
     "@reduxjs/toolkit": "^1.9.3",
     "antd": "^5.3.0",
+    "axios": "^1.7.2",
     "i18next-browser-languagedetector": "^7.0.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
