--- a/AdminCenter/src/Web/Properties/launchSettings.json
+++ b/AdminCenter/src/Web/Properties/launchSettings.json
@@ -11,7 +11,7 @@
     "AdminCenter.Web": {
       "commandName": "Project",
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
+      "applicationUrl": "http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
