--- a/AdminCenter/src/Web/appsettings.json
+++ b/AdminCenter/src/Web/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=./AdminCenter.db;Cache=Shared"
+    "DefaultConnection": "Data Source=/usr/local/admincenter/AdminCenter.db;Cache=Shared"
   },
   "Jwt": {
     "SecretKey": "https://github.com/zhangxianchengvip/admincenter.net",
