--- a/Apps/admin-center-react-antd/.env.production
+++ b/Apps/admin-center-react-antd/.env.production
@@ -1,2 +1,2 @@
 APP_TITLE = 'React-Better-Admin'
-VITE_APP_SERVER_ENDPOINT='http://localhost:5000'
+VITE_APP_SERVER_ENDPOINT='https://api.admin.hello-developer.cn'
